# module-server/src/main/kotlin/sk/momosilabs/suac/server/transaction/finished/persistence/TransactionFinishedPersistence.kt
@@ -2,8 +2,9 @@ package sk.momosilabs.suac.server.transaction.finished.persistence
 
 import org.springframework.data.domain.Page
 import org.springframework.data.domain.Pageable
-import sk.momosilabs.suac.server.transaction.finished.model.TransactionFinished
 import sk.momosilabs.suac.server.transaction.finished.model.ChargingToCreate
+import sk.momosilabs.suac.server.transaction.finished.model.MonthlyTransactionSummary
+import sk.momosilabs.suac.server.transaction.finished.model.TransactionFinished
 import sk.momosilabs.suac.server.transaction.finished.model.TransactionFinishedFilter
 import java.math.BigDecimal
 
@@ -12,6 +13,8 @@ interface TransactionFinishedPersistence {
     fun getAll(filter: TransactionFinishedFilter, pageable: Pageable): Page<TransactionFinished>
 
     fun getNegativeByUserId(userId: String, pageable: Pageable): Page<TransactionFinished>
+
+    fun getMonthlySummaryByUserId(userId: String, pageable: Pageable): Page<MonthlyTransactionSummary>
 
     fun sumUpForUsers(userIds: Set<String>): Map<String, BigDecimal>
 
